force-app/main/default/objects/Opportunity/fields/A_referencer__c.field-meta.xml
<CustomField>
    <fullName>A_referencer__c</fullName>
    <formula>OR(
 (NOT( BEGINS( Account.SapCode__c , &quot;S&quot; )) || ISBLANK( Account.SapCode__c )) &amp;&amp;
 IsClosed = false
,
 NOT( ISBLANK( Agency__c )) &amp;&amp;
 ( NOT( BEGINS( Agency__r.SapCode__c , &quot;S&quot; )) || ISBLANK( Agency__r.SapCode__c )) &amp;&amp;
 IsClosed = false
)</formula>
    <label>A référencer</label>
    <type>Checkbox</type>
</CustomField>