force-app/main/default/objects/Opportunity/fields/AdvertiserContact__c.field-meta.xml
<CustomField>
    <fullName>AdvertiserContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Annonceur</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunités (Contact Annonceur)</relationshipLabel>
    <relationshipName>AdvertiserOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>