force-app/main/default/objects/Opportunity/fields/AdvertizerSAPCode__c.field-meta.xml
<CustomField>
    <fullName>AdvertizerSAPCode__c</fullName>
    <formula>Account.SapCode__c</formula>
    <label>Code SAP annonceur</label>
    <type>Text</type>
</CustomField>