force-app/main/default/objects/Opportunity/fields/AgencyContact__c.field-meta.xml
<CustomField>
    <fullName>AgencyContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Agence</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunités (Contact Agence)</relationshipLabel>
    <relationshipName>AgencyOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>