force-app/main/default/objects/Opportunity/fields/AgencyDiscount__c.field-meta.xml
<CustomField>
    <fullName>AgencyDiscount__c</fullName>
    <formula>IF( 
TEXT(InvoicedAccount__c )= &quot;Agence&quot;,
TotalBeforeAgencyDiscount__c*0.15,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remise professionnelle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>