force-app/main/default/objects/Opportunity/fields/AgencySAPCode__c.field-meta.xml
<CustomField>
    <fullName>AgencySAPCode__c</fullName>
    <formula>Agency__r.SapCode__c</formula>
    <label>Code SAP agence</label>
    <type>Text</type>
</CustomField>