force-app/main/default/objects/Opportunity/fields/AutoOppId__c.field-meta.xml
<CustomField>
    <fullName>AutoOppId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Numéro d&apos;opportunité</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>