force-app/main/default/objects/Opportunity/fields/BillingEntity__c.field-meta.xml
<CustomField>
    <fullName>BillingEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entité de facturation</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>BillingEntity__c.Name</field>
            <operation>notContain</operation>
            <value>Maxit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>BillingEntity__c</referenceTo>
    <relationshipLabel>Opportunités</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>