force-app/main/default/objects/Opportunity/fields/Bon_facturer__c.field-meta.xml
<CustomField>
    <fullName>Bon_facturer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bon à facturer</label>
    <type>Checkbox</type>
</CustomField>