force-app/main/default/objects/Opportunity/fields/CA_forecasting__c.field-meta.xml
<CustomField>
    <fullName>CA_forecasting__c</fullName>
    <description>Utilisé pour le reporting</description>
    <formula>IF( IsWon = true,
 ClosedAmount__c ,
 (Amount* Probability)  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CA forecasting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>