force-app/main/default/objects/Opportunity/fields/Campagne_fil_rouge__c.field-meta.xml
<CustomField>
    <fullName>Campagne_fil_rouge__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Campagne fil rouge</label>
    <type>Checkbox</type>
</CustomField>