force-app/main/default/objects/Opportunity/fields/Campaign_days__c.field-meta.xml
<CustomField>
    <fullName>Campaign_days__c</fullName>
    <formula>CampaignEndDate__c - CampaignStartDate__c</formula>
    <label># jours de campagne</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>