force-app/main/default/objects/Opportunity/fields/CampaignEndDate__c.field-meta.xml
<CustomField>
    <fullName>CampaignEndDate__c</fullName>
    <label>Date de fin théorique</label>
    <type>Date</type>
</CustomField>