force-app/main/default/objects/Opportunity/fields/CampaignStartDate__c.field-meta.xml
<CustomField>
    <fullName>CampaignStartDate__c</fullName>
    <label>Date de début théorique</label>
    <type>Date</type>
</CustomField>