force-app/main/default/objects/Opportunity/fields/ClosedAmount__c.field-meta.xml
<CustomField>
    <fullName>ClosedAmount__c</fullName>
    <description>Utilisé pour le reporting</description>
    <label>Montant clôturé</label>
    <summarizedField>Insertion__c.Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>Insertion__c.Status__c</field>
        <operation>equals</operation>
        <value>Clôturé, OI facturé</value>
    </summaryFilterItems>
    <summaryForeignKey>Insertion__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>