force-app/main/default/objects/Opportunity/fields/ClosedAmountNotInvoiced__c.field-meta.xml
<CustomField>
    <fullName>ClosedAmountNotInvoiced__c</fullName>
    <label>Montant clôturé sans facture</label>
    <summarizedField>Insertion__c.Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>Insertion__c.Status__c</field>
        <operation>equals</operation>
        <value>Clôturé</value>
    </summaryFilterItems>
    <summaryForeignKey>Insertion__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>