force-app/main/default/objects/Opportunity/fields/Code_SAP_payeur__c.field-meta.xml
<CustomField>
    <fullName>Code_SAP_payeur__c</fullName>
    <formula>IF( ISPICKVAL(InvoicedAccount__c , &quot;Annonceur&quot;),  Account.SapCode__c ,
IF( ISPICKVAL(InvoicedAccount__c , &quot;Agence&quot;),  Agency__r.SapCode__c  ,
&quot;&quot;
))</formula>
    <label>Code SAP payeur</label>
    <type>Text</type>
</CustomField>