force-app/main/default/objects/Opportunity/fields/ControledAmount__c.field-meta.xml
<CustomField>
    <fullName>ControledAmount__c</fullName>
    <label>Montant contrôlé</label>
    <summarizedField>Insertion__c.Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>Insertion__c.Status__c</field>
        <operation>equals</operation>
        <value>Signé/contrôlé</value>
    </summaryFilterItems>
    <summaryForeignKey>Insertion__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>