force-app/main/default/objects/Opportunity/fields/CSMenCharge__c.field-meta.xml
<CustomField>
    <fullName>CSMenCharge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSM en charge</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>