force-app/main/default/objects/Opportunity/fields/CustomerReference__c.field-meta.xml
<CustomField>
    <fullName>CustomerReference__c</fullName>
    <label>Réf. client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>