force-app/main/default/objects/Opportunity/fields/Date_Collecte__c.field-meta.xml
<CustomField>
    <fullName>Date_Collecte__c</fullName>
    <formula>CampaignStartDate__c - 30</formula>
    <label>Date_Collecte</label>
    <type>Date</type>
</CustomField>