force-app/main/default/objects/Opportunity/fields/Date_reminder__c.field-meta.xml
<CustomField>
    <fullName>Date_reminder__c</fullName>
    <formula>CampaignStartDate__c - 5 = TODAY()</formula>
    <label>Date reminder</label>
    <type>Checkbox</type>
</CustomField>