force-app/main/default/objects/Opportunity/fields/EmailAnnonceur__c.field-meta.xml
<CustomField>
    <fullName>EmailAnnonceur__c</fullName>
    <formula>AdvertiserContact__r.Email</formula>
    <label>EmailAnnonceur</label>
    <type>Text</type>
</CustomField>