force-app/main/default/objects/Opportunity/fields/FeesRate__c.field-meta.xml
<CustomField>
    <fullName>FeesRate__c</fullName>
    <defaultValue>0.09</defaultValue>
    <label>Taux de frais plateforme</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>