force-app/main/default/objects/Opportunity/fields/GrossTotal__c.field-meta.xml
<CustomField>
    <fullName>GrossTotal__c</fullName>
    <label>TOTAL BRUT € HT</label>
    <summarizedField>Product__c.GrossTotal__c</summarizedField>
    <summaryForeignKey>Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>