force-app/main/default/objects/Opportunity/fields/GrossTotalFree__c.field-meta.xml
<CustomField>
    <fullName>GrossTotalFree__c</fullName>
    <label>TOTAL BRUT € HT offert</label>
    <summarizedField>Product__c.GrossTotal__c</summarizedField>
    <summaryFilterItems>
        <field>Product__c.Offert__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>