force-app/main/default/objects/Opportunity/fields/GrossTotalRegiePhysique__c.field-meta.xml
<CustomField>
    <fullName>GrossTotalRegiePhysique__c</fullName>
    <formula>((Amount -  TechnicalFeesAmount__c ) / (1 - Discount__c )) + TechnicalFeesAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TOTAL BRUT € HT (Régie Physique)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>