force-app/main/default/objects/Opportunity/fields/hideProductPrices__c.field-meta.xml
<CustomField>
    <fullName>hideProductPrices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OI: Fusionner prix produits</label>
    <type>Checkbox</type>
</CustomField>