force-app/main/default/objects/Opportunity/fields/InsertionOrderId__c.field-meta.xml
<CustomField>
    <fullName>InsertionOrderId__c</fullName>
    <displayFormat>OI{000000}</displayFormat>
    <label>Numéro d&apos;OI</label>
    <type>AutoNumber</type>
</CustomField>