force-app/main/default/objects/Opportunity/fields/InvoicedAccount__c.field-meta.xml
<CustomField>
    <fullName>InvoicedAccount__c</fullName>
    <label>Payeur</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annonceur</fullName>
                <default>true</default>
                <label>Annonceur</label>
            </value>
            <value>
                <fullName>Agence</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>