force-app/main/default/objects/Opportunity/fields/InvoicedAmount__c.field-meta.xml
<CustomField>
    <fullName>InvoicedAmount__c</fullName>
    <label>Montant facturé</label>
    <summarizedField>Insertion__c.Revenue__c</summarizedField>
    <summaryFilterItems>
        <field>Insertion__c.Status__c</field>
        <operation>equals</operation>
        <value>OI facturé</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Insertion__c.Free__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Insertion__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>