force-app/main/default/objects/Opportunity/fields/InvoicingLevel__c.field-meta.xml
<CustomField>
    <fullName>InvoicingLevel__c</fullName>
    <label>Niveau de facturation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contrat</fullName>
                <default>true</default>
                <label>Open Order (Contrat)</label>
            </value>
            <value>
                <fullName>Campagne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>