force-app/main/default/objects/Opportunity/fields/InvoicingMode__c.field-meta.xml
<CustomField>
    <fullName>InvoicingMode__c</fullName>
    <label>Mode de facturation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mensuelle</fullName>
            </value>
            <value>
                <fullName>Fin de campagne</fullName>
            </value>
            <value>
                <fullName>Début de campagne</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>