force-app/main/default/objects/Opportunity/fields/ioExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ioExpirationDate__c</fullName>
    <label>Date expiration OI</label>
    <type>Date</type>
</CustomField>