force-app/main/default/objects/Opportunity/fields/ioObservations__c.field-meta.xml
<CustomField>
    <fullName>ioObservations__c</fullName>
    <label>Observations OI</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>