force-app/main/default/objects/Opportunity/fields/lastProductUpdate__c.field-meta.xml
<CustomField>
    <fullName>lastProductUpdate__c</fullName>
    <label>Dernière MAJ Produit</label>
    <summarizedField>Product__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>