force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Cause du refus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lost to Competitor</fullName>
                <label>Perte pour concurrent</label>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
                <label>Pas de budget</label>
            </value>
            <value>
                <fullName>Price</fullName>
                <label>Prix trop élevé</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>Autre</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>