force-app/main/default/objects/Opportunity/fields/MandateDiscount__c.field-meta.xml
<CustomField>
    <fullName>MandateDiscount__c</fullName>
    <formula>IF( 
TEXT(InvoicedAccount__c )= &quot;Agence&quot;,
TotalBeforeAgencyDiscount__c*0.03,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remise Cumul des mandats</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>