force-app/main/default/objects/Opportunity/fields/MaxMonthlyBalance__c.field-meta.xml
<CustomField>
    <fullName>MaxMonthlyBalance__c</fullName>
    <formula>CASE ( InvoicedAccount__c ,
&quot;Agence&quot;, Agency__r.MaxMonthlyBalance__c ,
&quot;Annonceur&quot;, Account.MaxMonthlyBalance__c  ,
null)</formula>
    <inlineHelpText>Solde associé au payeur de l&apos;Open Order. Si vide, contactez la comptabilité pour qu&apos;il soit renseigné au niveau du compte payeur.</inlineHelpText>
    <label>Solde de dépense maximum mensuel</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>