force-app/main/default/objects/Opportunity/fields/nb_products__c.field-meta.xml
<CustomField>
    <fullName>nb_products__c</fullName>
    <label># produits d&apos;opportunités</label>
    <summaryForeignKey>Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>