force-app/main/default/objects/Opportunity/fields/NetTotalBeforeDiscount__c.field-meta.xml
<CustomField>
    <fullName>NetTotalBeforeDiscount__c</fullName>
    <label>Total Net avant remise</label>
    <summarizedField>Product__c.Total__c</summarizedField>
    <summaryForeignKey>Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>