force-app/main/default/objects/Opportunity/fields/Numero_OI_BDC__c.field-meta.xml
<CustomField>
    <fullName>Numero_OI_BDC__c</fullName>
    <formula>IF(OR(RecordType.DeveloperName =&apos;Promogaming&apos;,RecordType.DeveloperName =&apos;Promotion_Personnalisee&apos;,RecordType.DeveloperName =&apos;Autres&apos;) , &apos;BDC&apos;, &apos;OI&apos;) +
TRIM(right(AutoOppId__c, (LEN(AutoOppId__c) - 2)))</formula>
    <label>Numéro OI/BDC</label>
    <type>Text</type>
</CustomField>