force-app/main/default/objects/Opportunity/fields/Obligation_Ref_Client__c.field-meta.xml
<CustomField>
    <fullName>Obligation_Ref_Client__c</fullName>
    <formula>If(Account.Recovery__c, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Obligation Réf. Client</label>
    <type>Checkbox</type>
</CustomField>