force-app/main/default/objects/Opportunity/fields/OI_signed__c.field-meta.xml
<CustomField>
    <fullName>OI_signed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>L&apos;OI a été signé</label>
    <type>Checkbox</type>
</CustomField>