force-app/main/default/objects/Opportunity/fields/Ongoing_campaign__c.field-meta.xml
<CustomField>
    <fullName>Ongoing_campaign__c</fullName>
    <formula>TODAY() &gt;=  CampaignStartDate__c &amp;&amp; TODAY() &lt;= CampaignEndDate__c</formula>
    <label>Campagne en cours ?</label>
    <type>Checkbox</type>
</CustomField>