force-app/main/default/objects/Opportunity/fields/Opportunit_complete__c.field-meta.xml
<CustomField>
    <fullName>Opportunit_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A remplir par le contrôle de gestion.</description>
    <inlineHelpText>A remplir par le contrôle de gestion.</inlineHelpText>
    <label>Dossier administratif complet</label>
    <type>Checkbox</type>
</CustomField>