force-app/main/default/objects/Opportunity/fields/ReferenceClient__c.field-meta.xml
<CustomField>
    <fullName>ReferenceClient__c</fullName>
    <formula>OR(

AND(
RecordType.DeveloperName = &quot;Sales&quot;,
ISPICKVAL( InvoicedAccount__c , &quot;Agence&quot; ),
Agency__r.Recovery__c = true ,
ISBLANK( CustomerReference__c ),
IsClosed = false,
datevalue(CreatedDate) &lt; date(2020,12,03)
)
,
AND(
RecordType.DeveloperName = &quot;Sales&quot;,
ISPICKVAL( InvoicedAccount__c , &quot;Annonceur&quot; ),
Account.Recovery__c = true ,
ISBLANK( CustomerReference__c ),
IsClosed = false,
datevalue(CreatedDate) &lt; date(2020,12,03)

)
)</formula>
    <label>Référence client nécessaire</label>
    <type>Checkbox</type>
</CustomField>