force-app/main/default/objects/Opportunity/fields/Signed_IO__c.field-meta.xml
<CustomField>
    <fullName>Signed_IO__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Vérifiez la présence d&apos;un Signé dans les pièces jointes avant de passer l&apos;étape en &quot;Signé&quot;</inlineHelpText>
    <label>Signé ?</label>
    <type>Checkbox</type>
</CustomField>