force-app/main/default/objects/Opportunity/fields/SpecialConditions__c.field-meta.xml
<CustomField>
    <fullName>SpecialConditions__c</fullName>
    <label>Conditions Particulières</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>