force-app/main/default/objects/Opportunity/fields/Taches_planifiees_creees__c.field-meta.xml
<CustomField>
    <fullName>Taches_planifiees_creees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech - Tâches planifiées créées</label>
    <type>Checkbox</type>
</CustomField>