force-app/main/default/objects/Opportunity/fields/Targeting__c.field-meta.xml
<CustomField>
    <fullName>Targeting__c</fullName>
    <inlineHelpText>Champ non retranscrit dans l&apos;OI</inlineHelpText>
    <label>Ciblage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>