force-app/main/default/objects/Opportunity/fields/Tech_FraisGraphiques__c.field-meta.xml
<CustomField>
    <fullName>Tech_FraisGraphiques__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Champ technique qui détermine si un Produit d&apos;opportunité de type Frais graphique a été ajouté à l&apos;opportunité.</description>
    <inlineHelpText>Champ technique qui détermine si un Produit d&apos;opportunité de type Frais graphique a été ajouté à l&apos;opportunité.</inlineHelpText>
    <label>Tech_FraisGraphiques</label>
    <type>Checkbox</type>
</CustomField>