force-app/main/default/objects/Opportunity/fields/Tech_Mono_Multimarques__c.field-meta.xml
<CustomField>
    <fullName>Tech_Mono_Multimarques__c</fullName>
    <description>Renseigné automatiquement pour une campagne Promogaming lorsqu&apos;un produit d&apos;opportunité monomarque ou multimarque est inséré. Il n&apos;est pas possible d&apos;avoir une campagne Promogaming avec les 2 types de produits (Process métier)</description>
    <label>Tech_Mono_Multimarques</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monomarque</fullName>
            </value>
            <value>
                <fullName>Multimarques</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>