force-app/main/default/objects/Opportunity/fields/Tech_Requetes_Generees__c.field-meta.xml
<CustomField>
    <fullName>Tech_Requetes_Generees__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech Requêtes Générées</label>
    <type>Checkbox</type>
</CustomField>