force-app/main/default/objects/Opportunity/fields/TechnicalFeesAmount__c.field-meta.xml
<CustomField>
    <fullName>TechnicalFeesAmount__c</fullName>
    <label>Montant frais techniques</label>
    <summarizedField>Product__c.Total__c</summarizedField>
    <summaryFilterItems>
        <field>Product__c.TechnicalFees__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Product__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>