force-app/main/default/objects/Opportunity/fields/TechnicalFeesInvoicing__c.field-meta.xml
<CustomField>
    <fullName>TechnicalFeesInvoicing__c</fullName>
    <label>Facturation des frais techniques</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agence/Annonceur</fullName>
            </value>
            <value>
                <fullName>Agence</fullName>
                <default>true</default>
                <label>Agence</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>