force-app/main/default/objects/Opportunity/fields/Test_SF__c.field-meta.xml
<CustomField>
    <fullName>Test_SF__c</fullName>
    <formula>AdvertiserContact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test_SF</label>
    <type>Text</type>
</CustomField>