force-app/main/default/objects/Opportunity/fields/TotalBeforeAgencyDiscount__c.field-meta.xml
<CustomField>
    <fullName>TotalBeforeAgencyDiscount__c</fullName>
    <formula>IF(
TEXT(InvoicedAccount__c )= &quot;Agence&quot;,
GrossTotal__c - VolumeDiscount__c - GrossTotalFree__c,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total net € av remise agence</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>