force-app/main/default/objects/Opportunity/fields/TotalCAPrev__c.field-meta.xml
<CustomField>
    <fullName>TotalCAPrev__c</fullName>
    <label>Total CA prévisionnel</label>
    <summarizedField>Insertion__c.ExpectedRevenue__c</summarizedField>
    <summaryForeignKey>Insertion__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>