force-app/main/default/objects/Opportunity/fields/VolumeDiscount__c.field-meta.xml
<CustomField>
    <fullName>VolumeDiscount__c</fullName>
    <formula>IF(
TEXT( InvoicedAccount__c ) = &quot;Annonceur&quot;,
GrossTotalNotFree__c*0.85,
GrossTotalNotFree__c*0.8181
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remise Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>