force-app/main/default/objects/Opportunity/recordTypes/Autres.recordType-meta.xml
<RecordType>
    <fullName>Autres</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <label>Autres</label>
</RecordType>