force-app/main/default/objects/Opportunity/recordTypes/Extension_Audience.recordType-meta.xml
<RecordType>
    <fullName>Extension_Audience</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <label>Extension d’audience</label>
</RecordType>