force-app/main/default/objects/Opportunity/recordTypes/Promogaming.recordType-meta.xml
<RecordType>
    <fullName>Promogaming</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <label>Promogaming</label>
</RecordType>