force-app/main/default/objects/Opportunity/recordTypes/Promotion_Personnalisee.recordType-meta.xml
<RecordType>
    <fullName>Promotion_Personnalisee</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <label>Promotion Personnalisée</label>
</RecordType>