force-app/main/default/objects/Opportunity/recordTypes/Sales.recordType-meta.xml
<RecordType>
    <fullName>Sales</fullName>
    <active>false</active>
    <businessProcess>Sales</businessProcess>
    <label>Ordre d&apos;insertion</label>
</RecordType>