force-app/main/default/objects/Opportunity/recordTypes/Search.recordType-meta.xml
<RecordType>
    <fullName>Search</fullName>
    <active>true</active>
    <businessProcess>Sales</businessProcess>
    <label>Search</label>
</RecordType>