force-app/main/default/objects/Opportunity/validationRules/Advertizer_InvoicedAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>Advertizer_InvoicedAccount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(InvoicedAccount__c ,&quot;Annonceur&quot;) ,
ISBLANK( AdvertiserContact__c )
)</errorConditionFormula>
    <errorDisplayField>AdvertiserContact__c</errorDisplayField>
    <errorMessage>Veillez renseigner le Contact annonceur</errorMessage>
</ValidationRule>