force-app/main/default/objects/Opportunity/validationRules/Agency_InvoicedAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>Agency_InvoicedAccount</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(InvoicedAccount__c ,&quot;Agence&quot;) ,
ISBLANK( AgencyContact__c )
)</errorConditionFormula>
    <errorDisplayField>AgencyContact__c</errorDisplayField>
    <errorMessage>Veillez renseigner le Contact agence</errorMessage>
</ValidationRule>