force-app/main/default/objects/Opportunity/validationRules/Agency_is_selected.validationRule-meta.xml
<ValidationRule>
    <fullName>Agency_is_selected</fullName>
    <active>true</active>
    <description>Lorsque la valeur &quot;Agence&quot; est sélectionnée dans payeur, le champ agence doit être rempli.</description>
    <errorConditionFormula>AND(
 ISBLANK( Agency__c ),
 ISPICKVAL(InvoicedAccount__c  , &quot;Agence&quot;),
 NOT( ISPICKVAL( BU__c , &quot;Maxit&quot;))
)&amp;&amp; NOT($Setup.lazyLoading__c.DisableValidationRule__c)</errorConditionFormula>
    <errorDisplayField>Agency__c</errorDisplayField>
    <errorMessage>Lorsque la valeur &quot;Agence&quot; est sélectionnée dans payeur, le champs agence doit être rempli.</errorMessage>
</ValidationRule>