force-app/main/default/objects/Opportunity/validationRules/Dossier_incomplet.validationRule-meta.xml
<ValidationRule>
    <fullName>Dossier_incomplet</fullName>
    <active>true</active>
    <errorConditionFormula>Account.CompletedFile__c = false
&amp;&amp; ISPICKVAL( StageName , &quot;Signé&quot; )
&amp;&amp; ISCHANGED( StageName )</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Vous ne pouvez pas passer l&apos;opportunité en &quot;OI/BDC Signé&quot; tant que l&apos;annonceur n&apos;a pas de dossier complet.</errorMessage>
</ValidationRule>