force-app/main/default/objects/Opportunity/validationRules/OI_Closed_CDG_only.validationRule-meta.xml
<ValidationRule>
    <fullName>OI_Closed_CDG_only</fullName>
    <active>true</active>
    <description>Seuls les utilisateurs avec les profils CDG et admin peuvent passer un OI au statut &quot;Clôturé&quot;</description>
    <errorConditionFormula>($Profile.Id != &quot;00e09000002fIoh&quot; /*CDG*/
&amp;&amp;
$Profile.Id != &quot;00e09000004Euax&quot;) /* System Admin*/
&amp;&amp;
ISCHANGED(StageName)
&amp;&amp;
ISPICKVAL(StageName , &quot;Clôturé&quot;)</errorConditionFormula>
    <errorMessage>Seule l&apos;équipe CDG peut passer cet OI au statut &quot;Clôturé&quot;</errorMessage>
</ValidationRule>