force-app/main/default/objects/Opportunity/validationRules/OI_Closed_No_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>OI_Closed_No_Change</fullName>
    <active>false</active>
    <description>Un OI au statut &quot;Clôturé&quot; ne peut être modifié</description>
    <errorConditionFormula>AND(
NOT(ISPICKVAL(StageName , &quot;Clôturé&quot;)),
TEXT(PRIORVALUE(StageName )) = &quot;Clôturé&quot;,
ISCHANGED( StageName ),
nb_products__c &lt;&gt; 0
)</errorConditionFormula>
    <errorMessage>Le statut d’un OI/BDC Signé ne peut pas être changé sauf pour passer en Clôturé et le statut d’un Clôturé ne peut pas être changé</errorMessage>
</ValidationRule>