force-app/main/default/objects/Opportunity/validationRules/OI_Signed_Unavailable_When_Opp_Created.validationRule-meta.xml
<ValidationRule>
    <fullName>OI_Signed_Unavailable_When_Opp_Created</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &quot;Sales&quot;,
 ISNEW(),
 ISPICKVAL(StageName, &quot;Signé&quot;)
)&amp;&amp; NOT($Setup.lazyLoading__c.DisableValidationRule__c)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Il n&apos;est pas possible de sélectionner &quot;Signé&quot; lorsque l&apos;opportunité vient d&apos;être créée.</errorMessage>
</ValidationRule>