force-app/main/default/objects/Opportunity/validationRules/SalesUpdatesAfterSignature.validationRule-meta.xml
<ValidationRule>
    <fullName>SalesUpdatesAfterSignature</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT( ISNEW() ),
ISPICKVAL( StageName , &quot;Signé&quot; ),
NOT(ISCHANGED(StageName)),
NOT($Permission.ByPass_VR_SalesUpdatesAfterSignature),
$User.Tech_ProfileName__c = &apos;Sales&apos; /* Sales */ 
)</errorConditionFormula>
    <errorMessage>Vous ne pouvez plus modifier une opportunité OI/BDC Signé</errorMessage>
</ValidationRule>