force-app/main/default/objects/Opportunity/validationRules/Status_BLOQUE.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_BLOQUE</fullName>
    <active>false</active>
    <errorConditionFormula>(ISPICKVAL( Agency__r.CreditManagementStatus__c, &quot;BLOQUE&quot;) ||
ISPICKVAL( Account.CreditManagementStatus__c, &quot;BLOQUE&quot;))</errorConditionFormula>
    <errorMessage>Le statut Crédit Management de l&apos;annonceur/agence payeur est bloqué (voir avec Jean-Bernard pour débloquer si besoin).</errorMessage>
</ValidationRule>